--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,11 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter'
     testImplementation 'org.junit.jupiter:junit-jupiter-params:5.10.0'
 
+    // mocks
+    testImplementation 'org.mockito:mockito-junit-jupiter:5.5.0'
+    testImplementation 'org.mockito:mockito-all:2.0.2-beta'
+    testImplementation 'org.mockito:mockito-core:5.5.0'
+
 }
 
 test {
