--- a/build.gradle
+++ b/build.gradle
@@ -16,9 +16,10 @@ dependencies {
 
     // mocks
     testImplementation 'org.mockito:mockito-junit-jupiter:5.5.0'
-    testImplementation 'org.mockito:mockito-all:2.0.2-beta'
     testImplementation 'org.mockito:mockito-core:5.5.0'
 
+    // mocks static
+    testImplementation 'org.mockito:mockito-inline:5.2.0'
 }
 
 test {
